implement top app bar in profile screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">SmartStep</string>
+    <string name="profile_title">My profile</string>
+    <string name="profile_skip">Skip</string>
+    <string name="profile_subtitle">This information helps calculate your activity more accurately.</string>
+
 </resources>
